// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInitAction with a component that has been prepared and has completed re-initializing does not set an { isInitializing: true } prop 1`] = `
<div>
  completed
</div>
`;

exports[`withInitAction with a component that has been prepared and is re-initializing sets an { isInitializing: true } prop 1`] = `
<div>
  initializing
</div>
`;

exports[`withInitAction with a component that has been prepared and no initSelf state and initMode === MODE_PREPARE does not set an { isInitializing: true } prop 1`] = `
<div>
  completed
</div>
`;

exports[`withInitAction with a component with no initSelf state and initMode === MODE_INIT_SELF sets an { isInitializing: true } prop 1`] = `
<div>
  initializing
</div>
`;
